unpackaged/main/default/objects/Case/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <label>Артикул</label>
    <length>128</length>
    <type>Text</type>
</CustomField>