unpackaged/main/default/objects/Case/fields/CaseCategoryField__c.field-meta.xml
<CustomField>
    <fullName>CaseCategoryField__c</fullName>
    <label>Категория обращения</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Не включается</fullName>
            </value>
            <value>
                <fullName>Горит «сервис 1»</fullName>
            </value>
            <value>
                <fullName>Горит «сервис 2»</fullName>
            </value>
            <value>
                <fullName>Горит «давление»</fullName>
            </value>
            <value>
                <fullName>При работе прибора есть неприятный запах</fullName>
            </value>
            <value>
                <fullName>Неисправен вентилятор</fullName>
            </value>
            <value>
                <fullName>Неисправен ИВН</fullName>
            </value>
            <value>
                <fullName>Неисправна плата индикации</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>