unpackaged/main/default/objects/Case/fields/UserTION__c.field-meta.xml
<CustomField>
    <fullName>UserTION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Сотрудник ответственный за Обращение</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Обращения</relationshipLabel>
    <relationshipName>mDW8</relationshipName>
    <type>Lookup</type>
</CustomField>